--- a/theme.css
+++ b/theme.css
@@ -1,9 +1,8 @@
 @import url("https://puckzxz.github.io/NotAnotherAnimeTheme/build/v3/naat.v3.css");
 @import url('https://discordstyles.github.io/RadialStatus/dist/RadialStatus.css');
 :root {
---main-theme-color: rgb(81, 64, 213);
+--main-theme-color: rgba(0, 255, 64, 0.525);
 --theme-transparency: #000000cc;
---theme-background-image: url('https://i.pinimg.com/originals/88/1e/97/881e975af06ff67857544c7b64e65cbc.gif');
 --font-size: 100%;
 --server-listing-width: 72px;
 --mention-color: #faa61a0d;
@@ -15,14 +14,10 @@
 --video-screen-button-background-hovor-color: #c8c8c866;
 --video-screen-button-foreground-hovor-color: #ffffffff;
 --member-listing-role-color: #43b581ff;
---small-user-popout-background-image: url('https://cutewallpaper.org/21/black-gif-background/Black-background-gif-13-GIF-Images-Download.gif');
---small-user-popout-background-transparency: #00000099;
---small-user-popout-background-image-position: center;
---big-user-popout-background-image: url('https://cutewallpaper.org/21/black-gif-background/Black-background-gif-13-GIF-Images-Download.gif');
---big-user-popout-background-transparency: #00000099;
---big-user-popout-background-image-position: center;
 --code-markup-background-color: #00000099;
 --code-markup-border: 1px solid transparent;
+--small-user-popout-background-transparency: #101010e8;
+--big-user-popout-background-transparency: #101010e8;
 --message-box-transparency: #00000099;
 --embed-background-transparency: #00000099;
 --message-hover-buttons-background: #c8c8c81a;
